src/components/breadcrumb-bar/breadcrumb-bar.module.css
/* Note: mobile styles have not been fully implemented.
   For now, the breadcrumb links wrap to additional
   lines on small viewports. This does not match our
   current design spec, but felt like an acceptable
   stopgap. */

.root {
  position: relative;
  margin-bottom: 32px;
}

.listRoot {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  margin: 0;
  padding: 0;
}

.listItem {
  border: 1px solid magenta;
  &:not(:last-child)::after {
    color: var(--token-color-palette-neutral-400);
    content: '/';
    padding: 0 8px;
  }
}

.breadcrumbText {
  color: var(--token-color-palette-neutral-500);

  &[href]:hover {
    color: var(--token-color-palette-neutral-600);
    text-decoration: underline;
  }
}

